--- a/css/ryu-acupuncture.css
+++ b/css/ryu-acupuncture.css
@@ -334,11 +334,6 @@
   border-color: #000;
 }
 
-.paragraph-4 {
-  font-size: 14px;
-  line-height: 20px;
-}
-
 .ailment_list_item {
   color: #000;
 }
@@ -392,30 +387,6 @@
   -ms-grid-rows: 45px 0px 45px 0px 45px 0px 45px 0px 45px 0px 45px 0px 45px;
   grid-template-rows: 45px 45px 45px 45px 45px 45px 45px;
   border: 2px none #000;
-}
-
-.heading-6 {
-  text-align: right;
-}
-
-.heading-7 {
-  text-align: right;
-}
-
-.heading-8 {
-  text-align: right;
-}
-
-.heading-9 {
-  text-align: right;
-}
-
-.heading-10 {
-  text-align: right;
-}
-
-.heading-11 {
-  text-align: right;
 }
 
 .hours_h3_left {
@@ -982,10 +953,6 @@
   text-align: center;
 }
 
-.heading-13 {
-  color: #ee0b0b;
-}
-
 ._2_block_row_ailment_left {
   display: -webkit-box;
   display: -webkit-flex;
@@ -1295,11 +1262,6 @@
   object-fit: fill;
 }
 
-.body {
-  font-family: Lato, sans-serif;
-  font-size: 16px;
-}
-
 ._2_block_middle {
   overflow: visible;
   width: 50%;
@@ -1339,31 +1301,11 @@
   text-shadow: none;
 }
 
-.nav-link {
+.nav_link {
   font-weight: 700;
 }
 
-.nav-link-2 {
-  font-weight: 700;
-}
-
-.nav-link-3 {
-  font-weight: 700;
-}
-
-.nav-link-4 {
-  font-weight: 700;
-}
-
-.nav-link-5 {
-  font-weight: 700;
-}
-
-.nav-link-6 {
-  font-weight: 700;
-}
-
-.nav-link-6.w--current {
+.nav_link.w--current {
   font-weight: 700;
 }
 
@@ -1570,6 +1512,12 @@
   text-align: left;
 }
 
+.nav-menu {
+  position: relative;
+  direction: ltr;
+  text-align: center;
+}
+
 .hours_h3_right {
   text-align: right;
 }
@@ -1604,12 +1552,6 @@
   border-style: none none solid;
   border-width: 1px;
   border-color: #000 #000 #3898ec;
-}
-
-.ailment_h3_mobile {
-  font-family: Verdana, Geneva, sans-serif;
-  text-align: center;
-  text-shadow: 1px 1px 1px #3898ec;
 }
 
 .services_h3_mobile {
@@ -1702,15 +1644,7 @@
   padding-bottom: 75px;
 }
 
-.body-2 {
-  font-size: 16px;
-}
-
 .ryu_body {
-  font-size: 16px;
-}
-
-.body-3 {
   font-size: 16px;
 }
 
@@ -1745,6 +1679,10 @@
   padding-top: 75px;
   padding-right: 0px;
   padding-bottom: 75px;
+}
+
+.testimonials_section_mobile {
+  display: none;
 }
 
 @media screen and (max-width: 991px) {
@@ -1895,6 +1833,7 @@
     padding-bottom: 15px;
   }
   .section_h2 {
+    padding-top: 14px;
     font-size: 30px;
     line-height: 30px;
   }
@@ -1997,6 +1936,7 @@
     padding-bottom: 15px;
   }
   .testimonials_section {
+    display: none;
     height: 4500px;
   }
   .grid-2 {
@@ -2027,11 +1967,18 @@
     width: 4500px;
   }
   .testimonial_card_1 {
-    width: 270px;
+    width: 290px;
     height: 600px;
   }
   ._5_star {
-    margin-left: 88px;
+    margin-left: auto;
+    float: none;
+    clear: right;
+    direction: ltr;
+    -o-object-fit: fill;
+    object-fit: fill;
+    -o-object-position: 50% 50%;
+    object-position: 50% 50%;
   }
   .testimonial_author {
     margin-left: 130px;
@@ -2135,9 +2082,6 @@
   .conditions_treated_page {
     padding-top: 15px;
     padding-bottom: 15px;
-  }
-  .heading-13 {
-    text-align: center;
   }
   ._2_block_row_ailment_left {
     height: 250px;
@@ -2339,15 +2283,6 @@
     padding-left: 0px;
     text-align: center;
   }
-  .div-block-2 {
-    width: 100%;
-    height: 100%;
-    background-image: url('../images/man_with_back_pain.jpg');
-    background-position: 50% 50%;
-    background-size: cover;
-    background-repeat: no-repeat;
-    opacity: 1;
-  }
   .nav-menu {
     background-color: #fafafa;
   }
@@ -2366,40 +2301,10 @@
     padding-bottom: 15px;
     text-align: left;
   }
-  .services_mobile_picture_block {
-    position: absolute;
-    width: 100%;
-    height: 250px;
-  }
   .services_mobile_info_block {
     width: 90%;
     margin-right: auto;
     margin-left: auto;
-  }
-  .services_mobile_acupuncture_block {
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    height: 250px;
-    -webkit-box-pack: center;
-    -webkit-justify-content: center;
-    -ms-flex-pack: center;
-    justify-content: center;
-    -webkit-box-align: center;
-    -webkit-align-items: center;
-    -ms-flex-align: center;
-    align-items: center;
-    background-image: url('../images/acupuncture_treatment.jpg');
-    background-position: 50% 50%;
-    background-size: cover;
-    background-repeat: no-repeat;
-    opacity: 0.25;
-  }
-  .services_mobile_h3 {
-    margin-top: 0px;
-    margin-bottom: 0px;
-    text-align: center;
   }
   ._2_block_row_services_mobile {
     width: 100%;
@@ -2437,10 +2342,6 @@
     -ms-flex-align: center;
     align-items: center;
     border: 0px none #000;
-  }
-  .ailment_h3_mobile {
-    font-size: 20px;
-    line-height: 20px;
   }
   .services_para_mobile {
     margin-top: 10px;
@@ -2534,9 +2435,33 @@
     font-size: 35px;
     line-height: 35px;
   }
+  .ryu_body {
+    max-width: 100vw;
+  }
   .section_h1 {
     font-size: 30px;
     line-height: 30px;
+  }
+  .testimonials_section_mobile {
+    display: block;
+    height: 100vh;
+    padding-top: 75px;
+    padding-bottom: 75px;
+  }
+  .slider {
+    height: 100%;
+    margin-top: 15px;
+    margin-bottom: 25px;
+    background-color: #fff;
+  }
+  .slide-nav {
+    position: static;
+  }
+  .left-arrow {
+    display: none;
+  }
+  .right-arrow {
+    display: none;
   }
 }
 
