Added interactions to the conditions treated page, embedded 360 office photo

--- a/css/ryu-acupuncture.css
+++ b/css/ryu-acupuncture.css
@@ -488,7 +488,9 @@
 
 ._5_star {
   display: block;
-  margin-left: 186px;
+  margin-right: 0px;
+  margin-left: auto;
+  padding-right: 0px;
   padding-left: 0px;
   text-align: right;
 }
