--- a/css/ryu-acupuncture.css
+++ b/css/ryu-acupuncture.css
@@ -1738,6 +1738,7 @@
 }
 
 ._2_block_day_short {
+  display: none;
   overflow: visible;
   width: 50%;
   padding: 0px;
@@ -1776,6 +1777,25 @@
 }
 
 ._2_block_row_info.margin_top {
+  margin-top: 15px;
+}
+
+._2_block_row_horizontal {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+}
+
+._2_block_row_horizontal.margin_bottom {
+  margin-bottom: 15px;
+}
+
+._2_block_row_horizontal.margin_top {
   margin-top: 15px;
 }
 
@@ -1956,6 +1976,7 @@
     padding-right: 0px;
   }
   ._2_block_day_short {
+    display: block;
     padding-right: 0px;
   }
 }
@@ -2111,6 +2132,8 @@
     height: 4500px;
   }
   .days_text {
+    padding-right: 0px;
+    padding-left: 20px;
     font-size: 15px;
     line-height: 15px;
     text-align: left;
@@ -2256,12 +2279,15 @@
     opacity: 1;
   }
   ._2_block_row {
-    display: block;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
     -webkit-box-orient: vertical;
-    -webkit-box-direction: reverse;
-    -webkit-flex-direction: column-reverse;
-    -ms-flex-direction: column-reverse;
-    flex-direction: column-reverse;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
     -webkit-box-align: center;
     -webkit-align-items: center;
     -ms-flex-align: center;
@@ -2615,6 +2641,18 @@
   .right-arrow {
     display: none;
   }
+  ._360_frame_block {
+    display: block;
+    width: 100%;
+    grid-auto-columns: 1fr;
+    -ms-grid-columns: 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
+    -ms-grid-rows: auto auto;
+    grid-template-rows: auto auto;
+  }
+  .hours_block {
+    width: 100%;
+  }
   ._4_block_left {
     display: block;
     width: 90%;
@@ -2635,9 +2673,10 @@
     align-self: center;
   }
   .hours_text {
+    padding-right: 20px;
     font-size: 15px;
     line-height: 15px;
-    text-align: left;
+    text-align: right;
   }
   .list-item-7 {
     line-height: 14px;
@@ -2669,12 +2708,30 @@
     margin-bottom: 15px;
   }
   ._2_block_row_info {
-    display: none;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
     -webkit-box-orient: vertical;
     -webkit-box-direction: reverse;
     -webkit-flex-direction: column-reverse;
     -ms-flex-direction: column-reverse;
     flex-direction: column-reverse;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+  }
+  ._2_block_row_horizontal {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: row;
+    -ms-flex-direction: row;
+    flex-direction: row;
     -webkit-box-align: center;
     -webkit-align-items: center;
     -ms-flex-align: center;
