--- a/css/ryu-acupuncture.css
+++ b/css/ryu-acupuncture.css
@@ -362,10 +362,24 @@
 }
 
 .days_text {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  margin-top: 15px;
   margin-bottom: 15px;
-  padding-top: 15px;
+  padding-top: 0px;
   padding-right: 7.5px;
   padding-left: 0px;
+  -webkit-box-pack: end;
+  -webkit-justify-content: flex-end;
+  -ms-flex-pack: end;
+  justify-content: flex-end;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  border-radius: 1px;
   font-weight: 700;
   text-align: right;
 }
@@ -1711,8 +1725,9 @@
 }
 
 .hours_text {
+  margin-top: 15px;
   margin-bottom: 15px;
-  padding-top: 15px;
+  padding-top: 0px;
   padding-left: 7.5px;
   font-weight: 700;
   text-align: left;
